--- a/sustyle.css
+++ b/sustyle.css
@@ -31,7 +31,7 @@ body{
   
   }
   
-  /*igralno polje*/
+ 
   #kvadrat{
     border-radius: 5%;
   
@@ -56,7 +56,7 @@ body{
     justify-content: center;
     font-size: 20px;
     color:  white;
-    cursor: pointer; /*ko se z miško postavimo gor se obnaša kot gumb*/
+    cursor: pointer; 
   
   
   }
