--- a/sustyle.css
+++ b/sustyle.css
@@ -39,7 +39,7 @@ body{
     padding: 50px;
     border: 10px double white;
     margin: 100px;
-  
+    text-align: center;
     background-color:#2E4677;
   }
   
