prikaz narocil na domaci strani

--- a/sustyle.css
+++ b/sustyle.css
@@ -83,6 +83,10 @@ body{
     font-size: 20px;
     color:  white;
   }
+  .mrezaaa{
+    font-size: 20px;
+    color:  rgb(152, 196, 216);
+  }
   
   #navodila:hover{
     color: blue;
